# SuSceMod

./: .gitignore  LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml  setup-checkpoint.py
SuSceMod/: README.md
SuSceMod/analysis/: __init__.py  accuracy_map.py  crosstab.py  kappa_coefficient.py  plot_mnl_coefficients.py  spatial_metrics.py
SuSceMod/examples/: Example.ipynb  Example_density_based_scenario.ipynb  Example_growth_based_scenario.ipynb
SuSceMod/examples/.ipynb_checkpoints/: Example-checkpoint.ipynb
SuSceMod/examples/output/: class_counts_2020_2030.csv  class_counts_2020_2050.csv
SuSceMod/examples/output_density_based/: class_counts_2020_2030.csv
SuSceMod/simulation/: core_functions.py  data_utilities.py  input_handling.py  logger.py  scenarios.py
analysis/: README.md  accuracy_map.py  crosstab.py  kappa_coefficient.py  plot_mnl_coefficients.py  spatial_metrics.py
