[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SuSceMod"
version = "0.1.0"
description = "Package for scenario modelling for urban land use."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Anasua Chakraborty", email="A.chakraborty@uliege.be" }
]
dependencies = [
  "numpy",
  "pandas",
  "rasterio",
  "matplotlib",
  "seaborn",
  "openpyxl",
  "tabulate",
  "scikit-learn",
  "scikit-image",
  "GDAL>=3.6"
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["SuSceMod*"] } }